Fix the background from being to high on the z-index

--- a/doony.css
+++ b/doony.css
@@ -902,7 +902,7 @@ div.left-bar {
     top: 75px;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: -1;
     opacity: 0.2;
     background-image: url('/userContent/logo.svg');
     background-repeat: no-repeat;
